--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
       "ios",
       "android"
     ],
+    "entryPoint": "./src/App.js",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
